<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndicationsActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.flaviofaria.kenburnsview.KenBurnsView
                android:src="@drawable/bg_indications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <androidx.cardview.widget.CardView

                android:id="@+id/cv_indications"
                android:elevation="5dp"
                android:alpha="0.8"
                app:cardBackgroundColor="#6b6b83"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    android:background="@drawable/bg_gradient3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="#FFFFFF"
                    android:text="@string/indications"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </androidx.cardview.widget.CardView>


            <ScrollView
                android:layout_below="@+id/cv_indications"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv1"
                    android:alpha="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_rating5"/>

                        <TextView
                            android:textSize="11sp"
                            android:paddingRight="10dp"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:text="@string/rating5"
                            android:layout_weight="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv2"
                    android:alpha="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_below="@+id/cv1"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_rating4"/>

                        <TextView
                            android:textSize="11sp"
                            android:paddingRight="10dp"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:text="@string/rating4"
                            android:layout_weight="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cv3"
                    android:alpha="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_below="@+id/cv2"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_rating3"/>

                        <TextView
                            android:textSize="11sp"
                            android:paddingRight="10dp"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:text="@string/rating3"
                            android:layout_weight="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cv4"
                    android:alpha="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_below="@+id/cv3"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_rating2"/>

                        <TextView
                            android:textSize="11sp"
                            android:paddingRight="10dp"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:text="@string/rating2"
                            android:layout_weight="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cv5"
                    android:alpha="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_below="@+id/cv4"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_rating1"/>

                        <TextView
                            android:textSize="11sp"
                            android:paddingRight="10dp"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:text="@string/rating1"
                            android:layout_weight="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_indication"
                    android:layout_width="100dp"
                    android:text="Comenzar"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/btn_radius"
                    android:layout_height="50dp"
                    android:layout_below="@+id/cv5"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp" />

                </RelativeLayout>
            </ScrollView>


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>